fixed padding on mobile nav and removed sidedrawer/state on pages for hamburger menu

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -53,6 +53,7 @@ button:hover {
 @media (max-width: 799px) {
   main {
     margin-top: 20px;
+    margin-bottom: 40px;
   }
   .grid {
     display: flex;
