--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -63,7 +63,7 @@
 .app-nav a {
   display: block;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 10px;
   text-decoration: none;
 }
 
@@ -88,7 +88,7 @@
   .app-nav a {
     display: block;
     text-align: center;
-    padding: 18px 5px;
+    padding: 18px 0;
     text-decoration: none;
     font-size-adjust: inherit;
   }
